Prefetch queue persistence

--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -50,4 +50,6 @@ cga.ram = cgaRam.bus;
 RGBIMonitor monitor;
 cga.rgbiOutput = monitor;
 
+cpu.nmi = nmiSwitch & ((n_p_npi & n_p_instlsw) | (~(pck_)) | (~(u74_11)))
 
+u74_11 = ~(() & ())
