Hook up parity in config file

--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -50,6 +50,16 @@ cga.ram = cgaRam.bus;
 RGBIMonitor monitor;
 cga.rgbiOutput = monitor;
 
-cpu.nmi = nmiSwitch & ((n_p_npi & n_p_instlsw) | (~(pck_)) | (~(u74_11)))
+SRLatch cardParityError;
+ppi.c6 = cardParityError.output;
+cardParityError.set = bus.parityError;
+cardParityError.reset = ppi.b5;
 
-u74_11 = ~(() & ())
+SRLatch boardParityError;
+ppi.c7 = boardParityError.output;
+boardParityError.set = ram.parityError;
+boardParityError.reset = ppi.b4;
+
+cpu.nmi = nmiSwitch & ((n_p_npi & n_p_instlsw) |
+    boardParityError.output | cardParityError.output);
+
