Parity error latch fix

--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -51,15 +51,15 @@ RGBIMonitor monitor;
 cga.rgbiOutput = monitor;
 
 SRLatch cardParityError;
-ppi.c6 = cardParityError.output;
+ppi.c6 = cardParityError.lastSet;
 cardParityError.set = bus.parityError;
 cardParityError.reset = ppi.b5;
 
 SRLatch boardParityError;
-ppi.c7 = boardParityError.output;
+ppi.c7 = boardParityError.lastSet;
 boardParityError.set = ram.parityError;
 boardParityError.reset = ppi.b4;
 
 cpu.nmi = nmiSwitch & ((n_p_npi & n_p_instlsw) |
-    boardParityError.output | cardParityError.output);
+    ~boardParityError.lastReset | ~cardParityError.lastReset);
 
