SRLatch, compile fixes

--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -56,7 +56,7 @@ cardParityError.set = bus.parityError;
 cardParityError.reset = ppi.b5;
 
 SRLatch boardParityError;
-ppi.c7 = boardParityError.lastSet;
+ppi.c7 = boardParityError.~lastReset;
 boardParityError.set = ram.parityError;
 boardParityError.reset = ppi.b4;
 
