Concrete persistence and power functions

--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -6,7 +6,7 @@ cpu.frequency = 1/(3*hdot);  // 4.77MHz
 
 ISA8BitBus bus; bus.cpu = cpu;
 
-Int kB = 2^10;
+Integer kB = 2^10;
 
 ISA8BitRAM ram;
 // ram.rowBits is 7 for 4116 RAM chips
