Get rid of ConcretePersistenceType, make RAM a sub-component

--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -9,15 +9,11 @@ ISA8BitBus bus; bus.cpu = cpu;
 Integer kB = 2^10;
 
 ISA8BitRAM ram;
-// ram.rowBits is 7 for 4116 RAM chips
-//                8 for 4164
-//                9 for 41256
-// We use 9 here because programs written for rowBits == N will work
-// for rowBits < N but not necessarily rowBits > N.
-ram.rowBits = 9;
-ram.bytes = 640*kB;  // should be enough for anyone.
-// Real hardware can work with a decay time as short as hdot*12*18<<ram.rowBits
-ram.decayTime = (4*ms / 256) << ram.rowBits;
+ram.ram.rowBits = 8;  // 7 for 4116 RAM chips, 8 for 4164 or 9 for 41256
+ram.ram.bytes = 640*kB;  // should be enough for anyone.
+// Real hardware can work with a decay time as short as just above
+// hdot*12*18<<ram.ram.rowBits
+ram.ram.decayTime = (4*ms / 256) << ram.ram.rowBits;
 bus.slot = ram.bus;
 
 Intel8237DMAC dmac;                bus.chip0 = dmac.bus;
@@ -40,12 +36,9 @@ PCXTKeyboard keyboard; keyboardPort = keyboard;
 IBMCGA cga; bus.slot = cga.bus;
 cga.frequency = 1/hdot;
 cga.rom = "../../external/8088/roms/5788005.u33";
-
-RAM cgaRam;
-cgaRam.rowBits = 7;
-cgaRam.bytes = 16*kB;
-cgaRam.decayTime = 2*ms;
-cga.ram = cgaRam.bus;
+cga.ram.rowBits = 7;
+cga.ram.bytes = 16*kB;
+cga.ram.decayTime = 2*ms;
 
 RGBIMonitor monitor;
 cga.rgbiOutput = monitor;
