Debugger visualization and not component

--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -49,10 +49,10 @@ cardParityError.set = bus.parityError;
 cardParityError.reset = ppi.b5;
 
 SRLatch boardParityError;
-ppi.c7 = boardParityError.~lastReset;
-boardParityError.set = ram.parityError;
+ppi.c7 = ~boardParityError.lastReset;
+boardParityError.set = ram.ram.parityError;
 boardParityError.reset = ppi.b4;
 
-cpu.nmi = nmiSwitch & ((n_p_npi & n_p_instlsw) |
+cpu.nmi = nmiSwitch & (/*(n_p_npi & n_p_instlsw) |*/
     ~boardParityError.lastReset | ~cardParityError.lastReset);
 
