Add special-purpose connectors to bus

--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -23,6 +23,10 @@ Intel8255PPI ppi;                  bus.chip3 = ppi.bus;
 DMAPageRegisters dmaPageRegisters; bus.chip4 = dmaPageRegisters.bus;
 NMISwitch nmiSwitch;               bus.chip5 = nmiSwitch.bus;
 
+bus.dmac = dmac;
+bus.dmaPageRegisters = dmaPageRegisters;
+bus.pic = pic;
+
 pit.frequency = cpu.frequency/4;  // 1.193MHz
 
 PCXTKeyboardPort keyboardPort;
