More DMA and interrupt work

--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -23,9 +23,7 @@ Intel8255PPI ppi;                  bus.chip3 = ppi.bus;
 DMAPageRegisters dmaPageRegisters; bus.chip4 = dmaPageRegisters.bus;
 NMISwitch nmiSwitch;               bus.chip5 = nmiSwitch.bus;
 
-bus.dmac = dmac;
 bus.dmaPageRegisters = dmaPageRegisters;
-bus.pic = pic;
 
 pit.frequency = cpu.frequency/4;  // 1.193MHz
 
@@ -60,3 +58,4 @@ boardParityError.reset = ppi.b4;
 cpu.nmi = nmiSwitch & (/*(n_p_npi & n_p_instlsw) |*/
     ~boardParityError.lastReset | ~cardParityError.lastReset);
 
+cpu.irq = pic.int;
