Clock changes done, SHKG

--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -25,7 +25,20 @@ NMISwitch nmiSwitch;               bus.chip5 = nmiSwitch.bus;
 
 bus.dmaPageRegisters = dmaPageRegisters;
 
-pit.frequency = cpu.frequency/4;  // 1.193MHz
+Frequency pitFrequency = cpu.frequency/4;  // 1.193MHz
+pit.timer0.frequency = pitFrequency;
+pit.timer1.frequency = pitFrequency;
+pit.timer2.frequency = pitFrequency;
+pit.timer0.output = pic.irq0;
+pit.timer2.gate = ppi.b0
+pit.timer2.output = ppi.c5;
+
+OneBitAudio speaker = pit.timer2.output & ppi.b1;
+
+SRLatch refreshLatch;
+refreshLatch.set = pit.timer1.output & dmac.dack0;
+refreshLatch.reset = ~dmac.dack0;
+refreshLatch.lastSet = dmac.drq0;
 
 PCXTKeyboardPort keyboardPort;
 ppi.a = keyboardPort.data;
