--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -30,15 +30,16 @@ pit.timer0.frequency = pitFrequency;
 pit.timer1.frequency = pitFrequency;
 pit.timer2.frequency = pitFrequency;
 pit.timer0.output = pic.irq0;
-pit.timer2.gate = ppi.b0
+pit.timer2.gate = ppi.b0;
 pit.timer2.output = ppi.c5;
 
-OneBitAudio speaker = pit.timer2.output & ppi.b1;
+OneBitSpeaker speaker;
+speaker = pit.timer2.output & ppi.b1;
 
 SRLatch refreshLatch;
 refreshLatch.set = pit.timer1.output & dmac.dack0;
 refreshLatch.reset = ~dmac.dack0;
-refreshLatch.lastSet = dmac.drq0;
+refreshLatch.lastSet = dmac.dreq0;
 
 PCXTKeyboardPort keyboardPort;
 ppi.a = keyboardPort.data;
