Connector and clock refactoring, PIT work

--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -50,7 +50,7 @@ pic.irq1 = keyboardPort.irq;
 PCXTKeyboard keyboard; keyboardPort = keyboard;
 
 IBMCGA cga; bus.slot = cga.bus;
-cga.frequency = 1/hdot;
+cga.clock.frequency = 1/hdot;
 cga.rom = "../../external/8088/roms/5788005.u33";
 cga.ram.rowBits = 7;
 cga.ram.bytes = 16*kB;
