--- a/berapa/berapa.vcxproj
+++ b/berapa/berapa.vcxproj
@@ -172,6 +172,7 @@
     <ClInclude Include="..\include\alfe\hash.h" />
     <ClInclude Include="..\include\alfe\rational_functions.h" />
     <ClInclude Include="..\include\alfe\reference.h" />
+    <ClInclude Include="..\include\alfe\sdl2.h" />
     <ClInclude Include="..\include\alfe\stream.h" />
     <ClInclude Include="..\include\alfe\identifier.h" />
     <ClInclude Include="..\include\alfe\integer_functions.h" />
