--- a/berapa/berapa.vcxproj.filters
+++ b/berapa/berapa.vcxproj.filters
@@ -157,6 +157,9 @@
     <ClInclude Include="one_bit_speaker.h">
       <Filter>Berapa</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\alfe\sdl2.h">
+      <Filter>ALFE</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ALFE">
