--- a/game/game.vcxproj
+++ b/game/game.vcxproj
@@ -127,7 +127,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;../../external/SDL2-2.0.0/lib/x86/SDL2.lib;libpng.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>$(OutDir)shkg$(TargetExt)</OutputFile>
+      <OutputFile>$(OutDir)game$(TargetExt)</OutputFile>
     </Link>
     <PostBuildEvent>
       <Command>
@@ -156,6 +156,9 @@
     <ClCompile Include="game.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\include\alfe\bitmap.h" />
+    <ClInclude Include="..\include\alfe\bitmap_png.h" />
+    <ClInclude Include="..\include\alfe\file.h" />
     <ClInclude Include="..\include\alfe\sdl2.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
