--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -41,6 +41,8 @@ refreshLatch.set = pit.timer1.output & dmac.dack0;
 refreshLatch.reset = ~dmac.dack0;
 refreshLatch.lastSet = dmac.dreq0;
 
+dmac.clock.frequency = cpu.frequency;
+
 PCXTKeyboardPort keyboardPort;
 ppi.a = keyboardPort.data;
 ppi.b7 = keyboardPort.clear;
