--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -24,6 +24,7 @@ DMAPageRegisters dmaPageRegisters; bus.chip4 = dmaPageRegisters.bus;
 NMISwitch nmiSwitch;               bus.chip5 = nmiSwitch.bus;
 
 bus.dmaPageRegisters = dmaPageRegisters;
+bus.terminalCount = ~dmac.eop;
 
 Frequency pitFrequency = cpu.frequency/4;  // 1.193MHz
 pit.timer0.frequency = pitFrequency;
