Infinite bobs bug fixes

--- a/8088/demo/infinite_bobs/make_bobs/make_bobs.vcxproj
+++ b/8088/demo/infinite_bobs/make_bobs/make_bobs.vcxproj
@@ -148,6 +148,9 @@
   <ItemGroup>
     <ClCompile Include="make_bobs.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="NatvisFile.natvis" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
