--- a/8088/demo/infinite_bobs/make_bobs/make_bobs.vcxproj.filters
+++ b/8088/demo/infinite_bobs/make_bobs/make_bobs.vcxproj.filters
@@ -19,4 +19,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="NatvisFile.natvis" />
+  </ItemGroup>
 </Project>
