--- a/8088/cga/calibrate/cga2ntsc/cga2ntsc.vcxproj
+++ b/8088/cga/calibrate/cga2ntsc/cga2ntsc.vcxproj
@@ -92,6 +92,7 @@
     <ClInclude Include="..\..\..\..\include\alfe\bitmap_png.h" />
     <ClInclude Include="..\..\..\..\include\alfe\colour_space.h" />
     <ClInclude Include="..\..\..\..\include\alfe\complex.h" />
+    <ClInclude Include="..\..\..\..\include\alfe\config_file.h" />
     <ClInclude Include="..\..\..\..\include\alfe\file.h" />
     <ClInclude Include="..\..\..\..\include\alfe\hash_table.h" />
     <ClInclude Include="..\..\..\..\include\alfe\main.h" />
