cga2ntsc restructuring

--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -24,6 +24,7 @@ cgaROM = "5788005.u33";
 // bright backgrounds.
 // The improper modes latch bytes at incorrect times, so have strange bit
 // patterns and require multiple passes to get optimal results.
+// Use 0xfe for auto -HRES and 0xff for auto +HRES (tries all combinations).
 mode = 0x1a;
 
 // Low 4 bits of palette register are
@@ -35,6 +36,7 @@ mode = 0x1a;
 //   0x10..0x1f = background/light green/light red/yellow
 //   0x20..0x2f = background/cyan/magenta/light grey
 //   0x30..0x3f = background/light cyan/light magenta/white
+// Use 0xff for auto palette (tries all combinations appropriate for mode).
 palette = 0x0f;
 
 // In graphics modes, only the lowest bit of the scanline counter (CRTC "row
