cga2ntsc new features

--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -24,7 +24,7 @@ cgaROM = "5788005.u33";
 // bright backgrounds.
 // The improper modes latch bytes at incorrect times, so have strange bit
 // patterns and require multiple passes to get optimal results.
-// Use 0xfe for auto -HRES and 0xff for auto +HRES (tries all combinations).
+// Use 0x80 for auto -HRES and 0x81 for auto +HRES (tries all combinations).
 mode = 0x1a;
 
 // Low 4 bits of palette register are
