More cga2ntsc updates

--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -133,3 +133,8 @@ scanlineProfile = 0;
 scanlineBleeding = true;  // False to just saturate instead
 scanlineOffset = 0;  // Number of scanlines to offset image by
 scanlineSpacing = 2;  // Output pixels per scanline
+
+
+// Set to false to convert and immediately exit without showing UI, for batch
+// processing.
+interactive = true;
