--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -77,7 +77,7 @@ phase = 1;
 // Set to true to try to match the input picture as closely as possible
 // Set to false to show how an existing CGA RGBI image would look on the
 // composite output.
-matchMode = true;
+matchMode = !bitmapIsRGBI(inputPicture);
 
 // Character set to use for matching in text modes:
 //   0 = 0xdd                 160x100x16
@@ -116,6 +116,7 @@ saturation = 1;
 hue = 0;
 sharpness = 0;
 ntscPrimaries = false;
+combFilter = false;
 
 
 // Scaling and scanline options
