Add remainder of cga2ntsc GUI controls

--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -56,11 +56,27 @@ scanlinesPerRow = 2;
 scanlinesRepeat = 1;
 
 // CRTC interlace mode register value:
-//   0 = non-interlaced
-//   1 = interlace sync
-//   2 = interlace video
-//   3 = interlace sync and video
-// On a real MC6845 interlace mode 2 is the same as interlace mode 0, and the
+// No interlace sync (scanlines in same position on both fields)
+//   0 = None (non-interlaced, like standard CGA modes)
+//   1 = Flicker (alternate between two VRAM regions)
+//   4 = Even scanlines within row only
+//   5 = Odd scanlines within row only
+//   6 = Video (alternate between even and odd scanlines)
+//   7 = Video and flicker
+//  10 = Even flicker
+//  11 = Odd flicker
+// Interlace sync (scanlines on odd field half a scanline lower)
+//   2 = Sync (same data in both fields, inter-scanline gaps "filled in")
+//   3 = Sync and video (480i equivalent, e.g. 400 active scanlines)
+//   8 = Sync flicker
+//   9 = Sync video and flicker
+//  12 = Sync even
+//  13 = Sync odd
+//  14 = Sync even flicker
+//  15 = Sync odd flicker
+//  16 = Sync and video swapped
+//  17 = Sync video and flicker swapped
+// On a real MC6845 interlace mode 3 is the same as interlace mode 6, and the
 // IBM CGA card delays the vsync pulse to the next hsync so that interlace mode
 // 3 behaves as interlace video without interlace sync (and an extra scanline
 // every other frame). It's possible to add or remove interlace sync in
@@ -116,7 +132,12 @@ saturation = 1;
 hue = 0;
 sharpness = 0;
 ntscPrimaries = false;
-combFilter = false;
+// Comb filter settings:
+//   0 = no filter
+//   1 = (1, 1) kernel
+//   2 = (1, 2, 1) kernel
+combFilterVertical = 0;
+combFilterTemporal = 0;
 
 
 // Scaling and scanline options
@@ -133,7 +154,7 @@ scanlineProfile = 0;
 
 scanlineBleeding = true;  // False to just saturate instead
 scanlineOffset = 0;  // Number of scanlines to offset image by
-scanlineSpacing = 2;  // Output pixels per scanline
+zoom = 2;  // Output pixels per scanline vertically
 
 
 // Set to false to convert and immediately exit without showing UI, for batch
