Separate decoders for output and matcher

--- a/8088/cga/calibrate/cga2ntsc/cga2ntsc.vcxproj.filters
+++ b/8088/cga/calibrate/cga2ntsc/cga2ntsc.vcxproj.filters
@@ -86,5 +86,8 @@
     <ClInclude Include="..\..\..\..\include\alfe\array_functions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\include\alfe\ntsc_decode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
