--- a/game/game.vcxproj.filters
+++ b/game/game.vcxproj.filters
@@ -45,7 +45,7 @@
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <Natvis Include="NatvisFile.natvis" />
+    <Natvis Include="..\include\alfe.natvis" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="icon.ico">
