--- a/8088/cga/calibrate/cga2ntsc/cga2ntsc.vcxproj.filters
+++ b/8088/cga/calibrate/cga2ntsc/cga2ntsc.vcxproj.filters
@@ -89,6 +89,12 @@
     <ClInclude Include="..\..\..\..\include\alfe\ntsc_decode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\include\alfe\linked_list.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\alfe\exception.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="..\..\..\..\include\alfe.natvis" />
