--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -159,4 +159,5 @@ zoom = 2;  // Output pixels per scanline vertically
 
 // Set to false to convert and immediately exit without showing UI, for batch
 // processing.
-interactive = true;
+//interactive = true;
+interactive = false;
