Horizontal resampling working

--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -130,7 +130,8 @@ contrast = 1;
 brightness = 0;
 saturation = 1;
 hue = 0;
-sharpness = 0;
+chromaBandwidth = 1;  // units of colour carrier frequency /8
+lumaBandwidth = 1;  // units of colour carrier frequency
 ntscPrimaries = false;
 // Comb filter settings:
 //   0 = no filter
@@ -159,5 +160,12 @@ zoom = 2;  // Output pixels per scanline vertically
 
 // Set to false to convert and immediately exit without showing UI, for batch
 // processing.
-//interactive = true;
-interactive = false;
+interactive = true;
+//interactive = false;
+
+
+// Location of wisdom file for FFTW. This caches data which is used to speed up
+// subsequent runs of the program. The data it contains may be sub-optimal for
+// machines other than the machine it was created on, so it should not be
+// copied to other machines.
+fftWisdom = "wisdom";
