Knob slider rotating

--- a/8088/cga/calibrate/cga2ntsc/cga2ntsc.vcxproj
+++ b/8088/cga/calibrate/cga2ntsc/cga2ntsc.vcxproj
@@ -103,6 +103,7 @@
     <ClInclude Include="..\..\..\..\include\alfe\hash_table.h" />
     <ClInclude Include="..\..\..\..\include\alfe\identifier.h" />
     <ClInclude Include="..\..\..\..\include\alfe\integer_functions.h" />
+    <ClInclude Include="..\..\..\..\include\alfe\knob.h" />
     <ClInclude Include="..\..\..\..\include\alfe\linked_list.h" />
     <ClInclude Include="..\..\..\..\include\alfe\main.h" />
     <ClInclude Include="..\..\..\..\include\alfe\ntsc_decode.h" />
