--- a/8088/cga/calibrate/cga2ntsc/cga2ntsc.vcxproj
+++ b/8088/cga/calibrate/cga2ntsc/cga2ntsc.vcxproj
@@ -93,6 +93,7 @@
     <ClInclude Include="..\..\..\..\include\alfe\bitmap.h" />
     <ClInclude Include="..\..\..\..\include\alfe\bitmap_png.h" />
     <ClInclude Include="..\..\..\..\include\alfe\cga.h" />
+    <ClInclude Include="..\..\..\..\include\alfe\character_source.h" />
     <ClInclude Include="..\..\..\..\include\alfe\colour_space.h" />
     <ClInclude Include="..\..\..\..\include\alfe\complex.h" />
     <ClInclude Include="..\..\..\..\include\alfe\config_file.h" />
@@ -108,9 +109,12 @@
     <ClInclude Include="..\..\..\..\include\alfe\main.h" />
     <ClInclude Include="..\..\..\..\include\alfe\ntsc_decode.h" />
     <ClInclude Include="..\..\..\..\include\alfe\operator.h" />
+    <ClInclude Include="..\..\..\..\include\alfe\rational.h" />
+    <ClInclude Include="..\..\..\..\include\alfe\rational_functions.h" />
     <ClInclude Include="..\..\..\..\include\alfe\reference.h" />
     <ClInclude Include="..\..\..\..\include\alfe\rotors.h" />
     <ClInclude Include="..\..\..\..\include\alfe\set.h" />
+    <ClInclude Include="..\..\..\..\include\alfe\space.h" />
     <ClInclude Include="..\..\..\..\include\alfe\string.h" />
     <ClInclude Include="..\..\..\..\include\alfe\terminal6.h" />
     <ClInclude Include="..\..\..\..\include\alfe\thread.h" />
