Fix various UI issues

--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -12,19 +12,20 @@ doubleWidth = inputPicture.size.x <= 456;
 // image)
 doubleHeight = inputPicture.size.y <= 262;
 
+
 // CGA mode configuration
 
 // CGA mode register values:
 // Basic modes:
-//   0x08 = 40-column text
-//   0x09 = 80-column text
+//   0x08 = low-resolution text (e.g. 40 columns standard width)
+//   0x09 = high-resolution text (e.g. 80 columns standard width)
 //   0x0a = 2bpp graphics
 //   0x1a = 1bpp graphics
 // Improper modes
 //   0x0b = high-res 2bpp graphics
-//   0x18 = 40-column text with 1bpp graphics
-//   0x19 = 80-column text with 1bpp graphics
-//   0x1b = 1bpp graphics, odd bits ignored
+//   0x18 = low-resolution text with 1bpp graphics
+//   0x19 = high-resolution text with 1bpp graphics
+//   0x1b = high-res 1bpp graphics, odd bits ignored
 // Add 4 to any of these for to disable colour burst and carrier and use
 // red/cyan palette for 2bpp modes.
 // Add 0x20 in text modes to enable blinking and disable bright backgrounds.
@@ -127,9 +128,13 @@ temporalDiffusion = 0;
 
 // CGA composite encoding options
 
+// Connector used to connect CGA card to monitor:
+//   0 = RGBI
+//   1 = Composite (old)
+//   2 = Composite (new)
 // Newer CGA cards have a lower chroma amplitude and the text mode colours show
 // up as more different shades of grey on a monochrome monitor.
-newCGA = false;
+connector = 0;
 
 
 // NTSC decoding options
