Fix more UI issues

--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -132,7 +132,7 @@ temporalDiffusion = 0;
 //   0 = RGBI
 //   1 = Composite (old)
 //   2 = Composite (new)
-// Newer CGA cards have a lower chroma amplitude and the text mode colours show
+// New CGA cards have a lower chroma amplitude and the text mode colours show
 // up as more different shades of grey on a monochrome monitor.
 connector = 0;
 
