Fix knob issues and some other bugs

--- a/8088/cga/calibrate/cga2ntsc/cga2ntsc.vcxproj.filters
+++ b/8088/cga/calibrate/cga2ntsc/cga2ntsc.vcxproj.filters
@@ -125,6 +125,9 @@
     <ClInclude Include="..\..\..\..\include\alfe\rational_functions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\include\alfe\scanlines.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="..\..\..\..\include\alfe.natvis" />
