--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -159,9 +159,9 @@ aspectRatio = 5/6;  // Pixel aspect ratio of one ldot
 scanlineWidth = 0.5;  // Width of a scanline in units of "zoom" pixels
 
 // Scanline profiles
-//   0 = rectangular
+//   0 = rectangle
 //   1 = triangle
-//   2 = semicircle
+//   2 = circle
 //   3 = gaussian
 scanlineProfile = 0;
 
