FIR filtering integration

--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -145,12 +145,14 @@ saturation = 1;
 hue = 0;
 chromaBandwidth = 1;  // units of colour carrier frequency /8
 lumaBandwidth = 1;  // units of colour carrier frequency
+showClipping = false;
 // Comb filter settings:
-//   0 = no filter
-//   1 = (1, 1) kernel
-//   2 = (1, 2, 1) kernel
-combFilterVertical = 0;
-combFilterTemporal = 0;
+//   0 = none
+//   1 = 1 line
+//   2 = 2 line
+//   3 = 1 frame
+//   4 = 2 frame
+combFilter = 0;
 
 
 // Scaling and scanline options
