More FIR integration

--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -166,8 +166,11 @@ scanlineWidth = 1;  // Width of a scanline in units of "zoom" pixels
 //   2 = circle
 //   3 = gaussian
 scanlineProfile = 0;
-
-scanlineBleeding = true;  // False to just saturate instead
+// Scanline bleeding settings
+//   0 = none (clipping only, inaccurate colour)
+//   1 = down (fast)
+//   2 = symmetrical (good)
+scanlineBleeding = 2;
 zoom = 2;  // Output pixels per scanline vertically
 
 
