Add overscan option and fix some FIR bugs

--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -159,6 +159,7 @@ combFilter = 0;
 
 aspectRatio = 5/6;  // Pixel aspect ratio of one ldot
 scanlineWidth = 1;  // Width of a scanline in units of "zoom" pixels
+overscan = 0.1; // Overscan to add on each edge, as fraction of active size
 
 // Scanline profiles
 //   0 = rectangle
