FFT decoding integration

--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -145,6 +145,7 @@ saturation = 1;
 hue = 0;
 chromaBandwidth = 1;  // units of colour carrier frequency /8
 lumaBandwidth = 1;  // units of colour carrier frequency
+rollOff = 0;  // units of colour carrier frequency
 showClipping = false;
 // Comb filter settings:
 //   0 = none
