Bug fixes, optimizations and start of CGAData

--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -165,6 +165,7 @@ overscan = 0.1; // Overscan to add on each edge, as fraction of active size
 //   1 = triangle
 //   2 = circle
 //   3 = gaussian
+//   4 = sinc
 scanlineProfile = 0;
 // Scanline bleeding settings
 //   0 = none (clipping only, inaccurate colour)
